hello-kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-root
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-root
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-root
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-root
  template:
    metadata:
      labels:
        app: hello-kubernetes-root
    spec:
      containers:
      - name: hello-kubernetes
        image: pljeff/hello-kubernetes:1.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-path1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-path1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-path1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-path1
  template:
    metadata:
      labels:
        app: hello-kubernetes-path1
    spec:
      containers:
      - name: hello-kubernetes
        image: pljeff/hello-kubernetes:1.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-path2
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-path2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-path2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-path2
  template:
    metadata:
      labels:
        app: hello-kubernetes-path2
    spec:
      containers:
      - name: hello-kubernetes
        image: pljeff/hello-kubernetes:1.1
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-kubernetes-root
          servicePort: 80
      - path: /path1
        pathType: Prefix
        backend:
          serviceName: hello-kubernetes-path1
          servicePort: 80
      - path: /path2
        pathType: Prefix
        backend:
          serviceName: hello-kubernetes-path2
          servicePort: 80
